@@ -14,7 +14,7 @@
 #endif
 
 #define NDEBUG
-#include <assert.h>
+#include "ruby_assert.h"
 
 #if defined(HAVE_LIBGMP) && defined(HAVE_GMP_H)
 #define USE_GMP
